--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,74 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div>
+      <p>
+        <button
+          disabled
+          class="
+            js-push-btn
+            mdl-button mdl-js-button
+            mdl-button--raised
+            mdl-js-ripple-effect
+          "
+          style="
+            outline: none;
+            cursor: default;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #000;
+            border: 1px solid #000;
+            padding: 10px;
+            margin: 10px;
+            font-size: 1.2em;
+            font-weight: bold;
+          "
+        >
+          Enable Push Messaging
+        </button>
+      </p>
+      <section
+        class="subscription-details js-subscription-details is-invisible"
+        style="
+          margin: 10px;
+          padding: 10px;
+          border: 1px solid #000;
+          border-radius: 5px;
+          background-color: #fff;
+        "
+      >
+        <p>
+          Once you've subscribed your user, you'd send their subscription to
+          your server to store in a database so that when you want to send a
+          message you can lookup the subscription and send a message to it.
+        </p>
+        <p>
+          To simplify things for this code lab copy the following details into
+          the
+          <a href="https://web-push-codelab.glitch.me//">Push Companion Site</a>
+          and it'll send a push message for you, using the application server
+          keys on the site - so make sure they match.
+        </p>
+        <p>
+          <pre
+          style=" white-space: pre-wrap;
+          background-color: #EEEEEE;
+          padding: 16px;"
+          >
+            <code class="js-subscription-json" style="word-break: break-word;"></code>
+          </pre>
+          
+        </p>
+      </section>
+    </div>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
             .register("./serviceworker.js")
             .then((reg) => {
-              console.log("Success: ", reg.scope);
+              console.log("Success: ", reg);
               alert(
                 "Registro de Service Worker exitoso con alcance: " + reg.scope
               );
@@ -30,6 +90,8 @@
             });
         });
       }
-    </script>
+    </script> -->
+    <script src="scripts/main.js"></script>
+    <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
   </body>
 </html>
